# deer-flow

./: .gitignore  README.md  README_zh.md  pyproject.toml  server.py  test_api.py  test_multiagent_stream.py
.node/: DeerFlow_API_chat_stream分析.md  DeerFlow_API参考.md  DeerFlow任务调度与目标管理系统开发计划文档.md  DeerFlow任务调度与目标管理系统设计文档.md  DeerFlow工作流程.md  DeerFlow技术框架分析.md  LangGraph工作流开发范式.md  chat_stream_analysis.md  promot.md  taskflow 副本.md  taskflow_implementation_plan.md  任务.md  多智能体应用场景.md  多智能体开发计划文档.md  多智能体设计文档.md
docs/: deerflow_llm_integration.md  taskflow_llm_config.md
examples/: llm_usage_example.py
scripts/: debug_import.py  init_db.py
src/: config.py
src/agents/: __init__.py  agents.py  decorators.py
src/config/: __init__.py  agents.py  tools.py
src/database/: README.md  __init__.py  init_tables.sql  mysql_service.py
src/graph/: multiagent_builder.py  nodes.py  types.py
src/prompts/: context_analyzer.md  coordinator-zh.md  error_handler.md  human_interaction.md  objective_decomposer.md  planner.zh-CN.md  processing.md  quality_evaluator.md  reporter.zh-CN.md  researcher.zh-CN.md  sufficiency_evaluator.md  synthesis.md  task_analyzer.md
src/server/: app.py  chat_request.py  multiagent_controller.py
src/taskflow/: __init__.py  exceptions.py  llm_factory.py
src/taskflow/agents/: __init__.py  base.py  context_analyzer.py  error_handler.py  factory.py  objective_decomposer.py  processing_agent.py  quality_evaluator.py  research_agent.py  step_planner.py  synthesis_agent.py  task_analyzer.py
src/taskflow/api/: __init__.py  app.py  deps.py  schemas.py
src/taskflow/api/endpoints/: __init__.py  multiagent.py  objectives.py  scheduler.py  tasks.py  workflows.py
src/taskflow/config/: __init__.py  parser.py  settings.py
src/taskflow/db/: __init__.py  base.py  models.py  schemas.py  service.py
src/taskflow/graph/: __init__.py  builder.py  multiagent_builder.py  nodes.py  routers.py  types.py
src/taskflow/prompts/: __init__.py  context_analysis.py  context_analyzer.md  context_analyzer.zh-CN.md  error_handler.md  error_handling.py  human_interaction.md  objective_decomposer.md  objective_decomposer.zh-CN.md  processing.py  processing_agent.md  quality_evaluation.py  quality_evaluator.md  quality_evaluator.zh-CN.md  research_agent.md  sufficiency_evaluator.md  synthesis.py  synthesis_agent.md  task_analyzer.md  template.py  templates.py
src/taskflow/scheduler/: __init__.py  resource.py  scheduler.py
src/taskflow/scheduler/pools/: __init__.py  api_pool.py  database_pool.py  llm_pool.py  worker_pool.py
src/taskflow/tools/: __init__.py  industry_standard.py  web_crawler.py
src/taskflow/utils/: __init__.py  logger.py  validation.py
src/tools/: search.py
tests/unit/: __init__.py
tests/unit/scheduler/: __init__.py  test_resource_manager.py
