[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deer-flow"
version = "0.1.0"
description = "DeerFlow project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # 核心依赖
    "langchain-community>=0.3.19",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.5",
    "litellm>=1.63.11",
    "langchain-mcp-adapters>=0.0.9",
    "mcp>=1.6.0",
    
    # Web服务相关
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "sse-starlette>=1.6.5",
    "httpx>=0.28.1",
    "aiohttp>=3.9.0",
    "socksio>=1.0.0",
    
    # 数据处理和分析
    "pandas>=2.2.3",
    "numpy>=1.26.4",
    "yfinance>=0.2.54",
    "json-repair>=0.7.0",
    "jinja2>=3.1.3",
    
    # 数据抓取和搜索
    "duckduckgo-search>=8.0.0",
    "readabilipy>=0.3.0",
    "markdownify>=1.1.0",
    "arxiv>=2.2.0",
    
    # 数据库和存储
    "sqlalchemy>=2.0.38",
    "pymysql>=1.1.0",
    "cryptography>=42.0.0",
    "alembic>=1.13.0",
    
    # 工具和实用程序
    "python-dotenv>=1.0.1",
    "pydantic>=2.5.0",
    "tenacity>=8.2.3",
    "python-json-logger>=2.0.7",
    "inquirerpy>=0.3.4",
    "psutil>=5.9.8",
    "asyncio>=3.4.3",
]

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/build/
'''